[package]
name = "io_operations"
version = "0.1.0-pre"
authors = ["Cruz Julian Bishop <cruzjbishop@gmail.com>"]
description = "Placeholder for a crate providing I/O operations"

repository = "https://github.com/Techern/IoOperations-RS"
documentation = "http://techern.github.io/IoOperations-RS"
readme = "README.md"
keywords = ["IO", "TCP"]
license = "MIT"

[dependencies]
log = "0.3"
