[package]
name = "io_operations"
version = "0.2.0"
authors = ["Cruz Julian Bishop <cruzjbishop@gmail.com>"]
description = "Provides common I/O operations"

repository = "https://github.com/Techern/IoOperations-RS"
documentation = "http://techern.github.io/IoOperations-RS"
readme = "README.md"
keywords = ["IO", "TCP"]
license = "MIT"
